doc/src/content/docs/0.5.x/api/command/lowlevel/change-modulation-bank.mdx
---
title: ChangeModulationBank
description: Modulation バンクの切り替え
sidebar:
  order: 17
slug: 0.5.x/api/command/lowlevel/change-modulation-bank
---

import CodeTabs from "@components/CodeTabs.astro";

`ChangeModulationBank` は, 再生対象の Modulation バンクを切り替える低レベルコマンド.

## API

<CodeTabs rust={"ChangeModulationBank {\n    bank,\n    transition_mode,\n};"} python={"ChangeModulationBank(\n    bank=bank,\n    transition_mode=transition_mode,\n)"} csharp={"new ChangeModulationBank(\n    bank: bank,\n    transitionMode: transitionMode\n);"} />

| フィールド        | 型               | 説明             |
| ----------------- | ---------------- | ---------------- |
| `bank`            | `ModulationBank` | 切り替え先バンク |
| `transition_mode` | `TransitionMode` | 切り替え時の挙動 |

## TransitionMode

|            |              |
| -------------------- | --------------------------        |
| `Immediate`          | 即時                              |
| `SyncIdx`            | 次に再生インデックスが0になった時 |
| `SysTime(DcSysTime, margin)` | 指定した DC システム時刻 (`margin` は後述. 省略可) |
| `Gpio(GpioIn)`       | 指定 GPIO 入力ピンのトリガ        |
| `Ext`                | 拡張モード (バンク内の再生が終わると次のバンクに自動で切り替え) |
| `Later`              | 遷移しない (バンクへの書き込みだけを行う) |

`SysTime` は指定時刻が近すぎると FPGA が遷移を取りこぼす可能性がある, 「現在時刻 + マージン」より前の指定を `MISS_TRANSITION_TIME` エラーで拒否する.
マージンはデフォルトで 10 ms である.

`Later` は「バンクへ書き込むだけで遷移しない」ことを表す.
`Modulation` / `FociStm` / `PatternStm` の `transition_mode` に指定すると, 末尾のバンク切り替えを送らず書き込みと設定だけを行う.
遷移コマンドである `ChangeModulationBank` / `ChangePatternBank` 自身に指定した場合はビルド時エラーになる.
また `Later` は遷移しないため, `LoopBehavior` との組み合わせ制約の対象外である.

`Gpio(GpioIn)` の詳細は [GPIO ピン](/autd3-sdk/0.5.x/hardware/gpio/) を参照.

同一バンクへの切り替えでは, `TransitionMode` や `LoopBehavior` の設定は機能しない.
バンク運用の詳細は [バンクの切り替え チュートリアル](/autd3-sdk/0.5.x/getting-started/tutorial/bank/) を参照.

## Example

`ChangeModulationBank` は `WriteModulationBuffer` + `ConfigModulation` でバンクを準備した後に送り, 再生対象を切り替える.

<CodeTabs rust={"use autd3_rs::commands::{ChangeModulationBank, ConfigModulation, WriteModulationBuffer};\nuse autd3_rs::geometry::{Autd3, Geometry};\nuse autd3_rs::units::Hz;\nuse autd3_rs::value::{LoopBehavior, ModulationBank, SamplingConfig, TransitionMode};\nuse autd3_rs::{Client, ClientConfig};\nuse autd3_rs_link_nop::Nop;\nuse autd3_rs_modulation::{SineOption, modulation_buffer, sine};\n\nlet geometry = Geometry::new(vec![Autd3::default()]);\nlet client = Client::open(&geometry, Nop, ClientConfig::default()).await?;\n\nlet mut data = modulation_buffer();\nsine(150 * Hz, &SineOption::default(), &mut data)?;\n\nlet bank = ModulationBank::B0;\n\nlet mut builder = client.datagram_builder();\nbuilder.push(WriteModulationBuffer {\n    bank,\n    offset: 0,\n    data: &data,\n});\nbuilder.push(ConfigModulation {\n    bank,\n    config: SamplingConfig::FREQ_4K,\n    size: data.len(),\n    loop_behavior: LoopBehavior::Infinite,\n});\nbuilder.push(ChangeModulationBank {\n    bank,\n    transition_mode: TransitionMode::Immediate,\n});\nlet frames = builder.build()?;\nfor frame in &frames {\n    client.send_checked(frame).await?;\n}\n\nclient.close().await?;"} python={"import asyncio\n\nfrom autd3 import Client, ClientConfig\nfrom autd3.commands import ChangeModulationBank, ConfigModulation, WriteModulationBuffer\nfrom autd3.geometry import Autd3, Geometry\nfrom autd3.units import Hz\nfrom autd3.value import LoopBehavior, ModulationBank, SamplingConfig, TransitionMode\nfrom autd3_link_nop import Nop\nfrom autd3_modulation import SineOption, modulation_buffer, sine\n\n\nasync def main() -> None:\n    geometry = Geometry([Autd3([0.0, 0.0, 0.0], [1.0, 0.0, 0.0, 0.0])])\n    client = await Client.open(geometry, Nop(), ClientConfig())\n\n    data = modulation_buffer()\n    sine(150.0 * Hz, SineOption(), data)\n\n    bank = ModulationBank.B0\n\n    builder = client.datagram_builder()\n    builder.push(\n        WriteModulationBuffer(\n            bank=bank,\n            offset=0,\n            data=data,\n        )\n    )\n    builder.push(\n        ConfigModulation(\n            bank=bank,\n            config=SamplingConfig.FREQ_4K,\n            size=len(data),\n            loop_behavior=LoopBehavior.Infinite,\n        )\n    )\n    builder.push(\n        ChangeModulationBank(\n            bank=bank,\n            transition_mode=TransitionMode.Immediate,\n        )\n    )\n    frames = builder.build()\n    for frame in frames:\n        await client.send_checked(frame)\n\n    await client.close()\n\n\nasyncio.run(main())"} csharp={"using System.Numerics;\nusing System.Threading.Tasks;\nusing AUTD3;\nusing AUTD3.Link;\nusing Nop = AUTD3.Link.Nop;\nusing static AUTD3.Units;\n\nvar geometry = new Geometry(new[] { new Autd3(Vector3.Zero) });\nvar client = await Client.OpenAsync(geometry, new Nop(), new ClientConfig());\n\nvar data = Modulation.ModulationBuffer();\nModulation.Sine(150 * Hz, new SineOption(), data);\n\nvar bank = ModulationBank.B0;\n\nvar builder = client.DatagramBuilder();\nbuilder.Push(new WriteModulationBuffer(\n    bank: bank,\n    offset: 0,\n    data: data\n));\nbuilder.Push(new ConfigModulation(\n    bank: bank,\n    config: SamplingConfig.Freq4k,\n    size: (uint)data.Length,\n    loopBehavior: LoopBehavior.Infinite\n));\nbuilder.Push(new ChangeModulationBank(\n    bank: bank,\n    transitionMode: TransitionMode.Immediate\n));\nvar frames = builder.Build();\nforeach (var frame in frames)\n{\n    await client.SendCheckedAsync(frame);\n}\n\nawait client.CloseAsync();"} />
